deploy/frontend-backend.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ea
  labels:
    istio-injection:
      enabled
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ea-frontend
  namespace: ea
  labels:
    app: ea-frontend
    version: v1
    istio-injection:
      enabled
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ea-frontend
      version: v1
  template:
    metadata:
      labels:
        app: ea-frontend
        version: v1
        istio-injection:
          enabled
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: ea-frontend
        image: $(EA_REGISTRY)/frontend:0.1.0
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        resources:
          limits:
            cpu: 1024m
            memory: 1024Mi
          requests:
            cpu: 256m
            memory: 256Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ea-backend
  namespace: ea
  labels:
    app: ea-backend
    version: v1
    istio-injection:
      enabled
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ea-backend
      version: v1
  template:
    metadata:
      labels:
        app: ea-backend
        version: v1
        istio-injection:
          enabled
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: ea-backend
        image: $(EA_REGISTRY)/backend:0.1.0
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8000
          protocol: TCP
        resources:
          limits:
            cpu: 1024m
            memory: 1024Mi
          requests:
            cpu: 256m
            memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: ea-frontend
  namespace: ea
spec:
  selector:
    app: ea-frontend
    version: v1
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: ea-backend
  namespace: ea
spec:
  selector:
    app: ea-backend
    version: v1
  ports:
  - name: http
    port: 80
    targetPort: 8000
    protocol: TCP
