deploy/istio-entry.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: $(EA_HOST)
spec:
  hosts:
    - "$(EA_HOST)"
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: https-443
      protocol: HTTPS
  location: MESH_EXTERNAL
  resolution: DNS
